--- a/scss/responsive/_header.scss
+++ b/scss/responsive/_header.scss
@@ -45,6 +45,8 @@
         }
         .subcopy {
             width: 100%;
+            top: 22vh;
+            margin-bottom: 0;
             text-align: center;
         }
         .heading {
